--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <% include ./partials/head %>
   </head>
   <body>
+    <% include ./partials/nav %>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
